--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "allotment": "^1.20.4",
     "autoprefixer": "^10.4.21",
     "classnames": "^2.5.1",
@@ -28,6 +30,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-syntax-highlighter": "^15.6.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
